Thu Nov 6 14:54:42 2003  Yamuna Krishnamurthy  <yamuna@oomworks.com>
	
	* orbsvcs/tests/AVStreams/Simple_Two_Stage/README: 
	* orbsvcs/tests/AVStreams/Simple_Two_Stage/sender.h: 
	* orbsvcs/tests/AVStreams/Simple_Two_Stage/sender.cpp: 

	  Added command line arguments to specify local and peer
	  addresses. In case of SCTP_SEQ protocol added command line
	  arguments to specify secondary addresses.

	* orbsvcs/tests/AVStreams/Simple_Two_Stage/README: 	

	  Updated to include info about command line arguments to specify
	  local and peer addresses.
	
Thu Nov  6 13:17:34 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Synch_Invocation.cpp: 

	  If the ORB prepares to throw a COMM_FAILURE exception with
	  completed_maybe, just delegate to the ORB_Core to take the right
	  decision.
	
Thu Nov  6 12:53:46 2003  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * orbsvcs/examples/LoadBalancing/server.cpp:
          Added a include to OS.h to fix a compile error.

Thu Nov  6 07:04:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Queued_Message.h:
          Added #include ace/os_include/os_stddef.h to get size_t

Wed Nov  5 19:19:08 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/PollableC.cpp:
	* tao/PollableC.h:
	* tao/PollableC.i:

	  Regenerated the code.

	* tao/Synch_Reply_Dispatcher.cpp:
	* tao/DynamicInterface/DII_Reply_Dispatcher.cpp:
	* tao/Messaging/Asynch_Reply_Dispatcher.cpp:

	  Added debugging statements to indicate failure of clone_from ()
	  when debugging level is cranked up.

	* tao/Remote_Invocation.cpp:
	* tao/Synch_Invocation.cpp:
	* tao/Messaging/Asynch_Reply_Dispatcher.cpp (handle_timeout):

	  Changed the completion status of the CORBA::TIMEOUT exception
	  thrown. For example returning a completion status of
	  COMPLETED_NO while timing out waiting for the reply seems brain
	  dead. Further fixed the minor code to return the SEND_MINOR_CODE
	  or RECV_MINOR_CODE as the case maybe.
